# power-playlists

./: .editorconfig  .gitignore  .readthedocs.yml  LICENSE  README.md  README.rst  TODO.md  Taskfile.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  docs.yml  pypi-publish.yml
.task/checksum/: format-check  install  lint  typecheck
config/: app.yaml
docs/: CI_SETUP.md  Makefile  NODE_REFERENCE.md  PYPI_PUBLICATION.md  conf.py  index.rst  nodes.rst  requirements.txt
dynamicplaylist/: constants.py  main.py
samples/: basic-filtering.yaml  complex-workflow.yaml  dynamic-template-release-date-filtering.yaml  dynamic-template-simple.yaml  release-date-filtering.yaml  xkrogen.yaml
scripts/: generate_node_docs.py
src/dynamicplaylist/: main.py  nodes.py  spotify_client.py  utils.py
src/power_playlists/: __init__.py  _version.py  gui_editor.py  main.py  spotify_client.py  utils.py
src/power_playlists/web_ui/: index.html
src/powerplaylists/: gui_editor.py  main.py  nodes.py  spotify_client.py  utils.py
tests/: README_INTEGRATION_TESTS.md  test_gui_editor.py  test_gui_editor_browser.py  test_gui_editor_comprehensive.py  test_gui_editor_integration.py  test_mocks.py  test_node.py  test_spotify_client.py  test_version.py  testutil.py
