[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "power-playlists"
version = "0.1"
description = "TODO"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Erik Krogen", email = "erikkrogen@gmail.com"},
]
keywords = ["spotify", "playlists", "tool"]
classifiers = [
    "Operating System :: Unix",
    "Operating System :: POSIX", 
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.9"
dependencies = [
    "Click>=8.0,<9",
    "lockfile>=0.12",
    "psutil>=5.9,<6",
    "python-daemon>=3.0,<4",
    "python-dateutil>=2.8.1,<3",
    "PyYAML>=6.0,<7",
    "setuptools>=65.0",
    "spotipy>=2.24.0,<3",
]

[project.optional-dependencies]
test = [
    "pytest~=7.4.4",
]
docs = [
    "sphinx==7.1.2",
    "sphinx_rtd_theme==2.0.0",
]
dev = [
    "power-playlists[test,docs]",
]

[project.scripts]
power-playlists = "powerplaylists.main:cli"

[project.urls]
Homepage = "TODO"
Repository = "https://github.com/xkrogen/power-playlists"

[tool.hatch.build.targets.wheel]
packages = ["src/powerplaylists"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/samples",
    "README.rst",
    "LICENSE",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E4",   # Import errors  
    "E7",   # Statement errors
    "E9",   # Runtime errors
    "F63",  # Invalid escapes
    "F7",   # Syntax errors
    "F82",  # Undefined names  
]
ignore = [
    "F403",   # star imports - tolerate for now
    "F405",   # may be undefined from star imports - tolerate for now
    "E721",   # type comparisons - tolerate for now
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20"]  # Allow print statements in tests

[tool.mypy]
python_version = "3.12"
# Use default strict MyPy settings

[[tool.mypy.overrides]]
module = [
    "spotipy.*",
    "lockfile.*", 
    "psutil.*",
    "daemon.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
    "types-psutil>=7.0.0.20250822",
    "types-python-dateutil>=2.9.0.20250822",
    "types-pyyaml>=6.0.12.20250822",
]
